# ninjamcstudy

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindConnection.cmake  FindPid.cmake
include/ninja/mcstudy/: HistogramStyle.hpp
lib/: CMakeLists.txt  DrawConst.hpp  HistogramStyle.cpp  HistogramStyle.hh  HistogramStyle.hpp  MyFunction.cpp  MyFunction.hpp
macro/: MergeEfficiency.C  MergeEfficiencyBreakdown.C  MergePartnerEfficiency.C  ProtonRangeRes.C  Stack0pi1p.C  Stack0pi2p.C  StackDetector.C  StackMode.C  StackMode0pi1p.C  StackMode0pi2p.C  StackModeAng.C  StackModeMom.C  StackModeMulti.C  StackPid.C  StackTopology.C
macro/CC0pi/: StackModeAng.C  StackModeMom.C  StackModeMulti.C
shell/: nohup.out  run.sh  run_anu_bg.sh  run_bm_bg.sh  run_draw.sh  run_draw_detsys.sh  run_draw_xsecsys.sh  run_dwg_bg.sh  run_eff_br.sh  run_fe_bg.sh  run_hadd.sh  run_muon_expected.sh  run_other_ecc_bg.sh  run_pm_bg.sh  run_posdif_bg.sh  run_range_res.sh  run_sand.sh  run_uwg_bg.sh  run_wall_bg.sh  run_wall_check.sh  run_wall_draw.sh  submit_detsys_run_draw.py  submit_draw.py  submit_hadd.py  submit_xsecsys_run_draw.py
shell/CC0pi/: run_anu_bg_0pi.sh  run_draw_0pi.sh  run_draw_detsys_0pi.sh  run_draw_xsecsys_0pi.sh  run_fe_bg_0pi.sh  submit_detsys_run_draw_0pi.py  submit_xsecsys_run_draw_0pi.py
shell/script/: nohup.out  submit_muon_expected.py
src/Background/: AnuIntBG.cpp  BabyMindBG.cpp  CMakeLists.txt  DownWagasciBG.cpp  EdgeEvaluation.cpp  IronIntBG.cpp  MomentumConsistency.cpp  MuonMisMatchCheck.cpp  OtherEccBG.cpp  ProtonModuleBG.cpp  ProtonModuleBGMode.cpp  UpWagasciBG.cpp  WallBG.cpp
src/Efficiency/: CMakeLists.txt  EventEfficiencyBreakdown.cpp  PartnerEfficiencyBreakdown.cpp
src/EventSelection/: CMakeLists.txt  MinimumDistance.cpp  MinimumDistance.hpp
src/Kink/: CMakeLists.txt  KinkInteraction.cpp  KinkInteraction.cpp.bak  KinkSandMuon.cpp  KinkSandMuon.cpp.bak  MakeKinkDistribution.cpp  MomchKinkDistribution.cpp  MomchMerge.cpp  MomchMerge.cpp.bak  MomchMerge.hpp  MomchMerge.hpp.bak
src/MatchAcceptance/: CMakeLists.txt  MuonExpectedDistribution.cpp  TangentDistributionPaper.cpp
src/NeutrinoDirection/: NeutrinoDirection.cpp
src/ReconDistribution/: Analyze0pi1p.cpp  Analyze0pi1p.hpp  Analyze0pi2p.cpp  Analyze0pi2p.hpp  AnalyzeAngle.cpp  AnalyzeAngle.hpp  AnalyzeEfficiency.cpp  AnalyzeEfficiency.hpp  AnalyzeMomentum.cpp  AnalyzeMomentum.hpp  AnalyzeMultiplicity.cpp  AnalyzeMultiplicity.hpp  AnalyzePartnerEfficiency.cpp  AnalyzePartnerEfficiency.hpp  AnalyzePid.cpp  AnalyzePid.hpp  AnalyzeVertex.cpp  AnalyzeVertex.hpp  AngleCorrection.cpp  CMakeLists.txt  MomchDraw.cpp  ProtonAcceptance.cpp  WallDistribution.cpp  WallMomchDraw.cpp
src/TrueDistribution/: CMakeLists.txt  MuonTrueDistribution.cpp  PionTrueDistribution.cpp  ProtonTrueDistribution.cpp
src/TrueDistribution/Mode/: CMakeLists.txt  MuonTrueDistributionMode.cpp  PionTrueDistributionMode.cpp  ProtonTrueDistributionMode.cpp
src/TrueDistribution/Topology/: MuonTrueDistributionTopology.cpp
